--- a/index.html
+++ b/index.html
@@ -404,24 +404,13 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".2s">
-                        <div class="team__item">
-                            <div class="team__thumb">
-                                <a href="team-details.html"><img src="assets/img/team/team01.png" alt="img"></a>
-                            </div>
-                            <div class="team__content">
-                                <h4 class="name"><a href="team-details.html">killer master</a></h4>
-                                <span class="designation">Blockchain Expert</span>
-                            </div>
-                        </div>
-                    </div>
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".4s">
                         <div class="team__item">
                             <div class="team__thumb">
                                 <a href="team-details.html"><img src="assets/img/team/team02.png" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="team-details.html">tanu mark</a></h4>
+                                <h4 class="name"><a href="team-details.html">Ömer Kuru</a></h4>
                                 <span class="designation">Developer</span>
                             </div>
                         </div>
@@ -432,8 +421,8 @@
                                 <a href="team-details.html"><img src="assets/img/team/team03.png" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="team-details.html">Thompson Scot</a></h4>
-                                <span class="designation">Art Director</span>
+                                <h4 class="name"><a href="team-details.html">Selahattİn Evgİn</a></h4>
+                                <span class="designation">Art Director, Others</span>
                             </div>
                         </div>
                     </div>
@@ -443,8 +432,8 @@
                                 <a href="team-details.html"><img src="assets/img/team/team04.png" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="team-details.html">Shakh Danial</a></h4>
-                                <span class="designation">Crypto Advisor</span>
+                                <h4 class="name"><a href="team-details.html">Saffet Sağlam</a></h4>
+                                <span class="designation">CO-Founder</span>
                             </div>
                         </div>
                     </div>
@@ -711,11 +700,6 @@
                     <div class="col-md-7">
                         <div class="copyright__text">
                             <p>Copyright © 2023 - All Rights Reserved By <span>Mykd</span></p>
-                        </div>
-                    </div>
-                    <div class="col-md-5">
-                        <div class="copyright__card text-center text-md-end">
-                            <img src="assets/img/others/payment_card.png" alt="img">
                         </div>
                     </div>
                 </div>
