--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="col-xxl-4 col-xl-5 col-lg-6 col-md-9">
                         <div class="nft-item__box">
                             <div class="nft-item__thumb">
-                                <a href="shop-details.html"><img src="assets/img/nft/investormania.png" alt="img"></a>
+                                <a href="https://store.steampowered.com/app/2292890/Investormania"><img src="assets/img/nft/investormania.png" alt="img"></a>
                             </div>
                             <div class="nft-item__content">
                                 <h4 class="title"><a href="https://store.steampowered.com/app/2292890/Investormania">INVESTORMANIA</a></h4>
