--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     <div class="col-xl-6 col-lg-8 col-md-11">
                         <div class="video__content text-center">
                             <h2 class="title">JOIN THE <span>COMMUNITY</span></h2>
-                            <p>Join our Discord community and choosec onsteur</p>
+                            <p>Join our Discord community</p>
                             <a href="https://discord.gg/sEkTY3MnA6" target="_blank" class="video__btn tg-btn-1"><span>join discord</span></a>
                         </div>
                     </div>
