--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Windows, Steam, PC video game developers">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="shortcut icon" href="assets\img\logo\NCLogowhite2.png">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/plugins.css">
