--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             </div>
                             <div class="team__content">
                                 <h4 class="name"><a href="team-details.html">Ömer Kuru</a></h4>
-                                <span class="designation">Developer</span>
+                                <span class="designation">CEO, Developer</span>
                             </div>
                         </div>
                     </div>
@@ -414,8 +414,8 @@
                                 <a href="team-details.html"><img src="assets/img/team/team03.png" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="team-details.html">Selahattİn Evgİn</a></h4>
-                                <span class="designation">Art Director, Others</span>
+                                <h4 class="name"><a href="team-details.html">Saffet Sağlam</a></h4>
+                                <span class="designation">CO-Founder</span>
                             </div>
                         </div>
                     </div>
@@ -425,8 +425,8 @@
                                 <a href="team-details.html"><img src="assets/img/team/team04.png" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="team-details.html">Saffet Sağlam</a></h4>
-                                <span class="designation">CO-Founder</span>
+                                <h4 class="name"><a href="team-details.html">Selahattİn Evgİn</a></h4>
+                                <span class="designation">Art Director, Others</span>
                             </div>
                         </div>
                     </div>
