--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             </div>
                             <div class="team__content">
                                 <h4 class="name"><a href="team-details.html">Ömer Kuru</a></h4>
-                                <span class="designation">CEO, Developer</span>
+                                <span class="designation">CEO, Founder, Developer</span>
                             </div>
                         </div>
                     </div>
