--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                             </div>
                             <div class="team__content">
                                 <h4 class="name"><a href="team-details.html">Saffet Sağlam</a></h4>
-                                <span class="designation">CO-Founder</span>
+                                <span class="designation">Partner</span>
                             </div>
                         </div>
                     </div>
