--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".4s">
                         <div class="team__item">
                             <div class="team__thumb">
-                                <a href="team-details.html"><img src="assets/img/team/team02.png" alt="img"></a>
+                                <a href="#"><img src="assets/img/team/team02.png" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="team-details.html">Ömer Kuru</a></h4>
+                                <h4 class="name"><a href="#">Ömer Kuru</a></h4>
                                 <span class="designation">CEO, Founder, Developer</span>
                             </div>
                         </div>
@@ -411,10 +411,10 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".6s">
                         <div class="team__item">
                             <div class="team__thumb">
-                                <a href="team-details.html"><img src="assets/img/team/team03.png" alt="img"></a>
+                                <a href="#"><img src="assets/img/team/team03.png" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="team-details.html">Saffet Sağlam</a></h4>
+                                <h4 class="name"><a href="#">Saffet Sağlam</a></h4>
                                 <span class="designation">Partner</span>
                             </div>
                         </div>
@@ -422,10 +422,10 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".8s">
                         <div class="team__item">
                             <div class="team__thumb">
-                                <a href="team-details.html"><img src="assets/img/team/team04.png" alt="img"></a>
+                                <a href="#"><img src="assets/img/team/team04.png" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="team-details.html">Selahattİn Evgİn</a></h4>
+                                <h4 class="name"><a href="#">Selahattİn Evgİn</a></h4>
                                 <span class="designation">Art Director, Others</span>
                             </div>
                         </div>
