--- a/index.html
+++ b/index.html
@@ -65,7 +65,19 @@
                                 </div>
                                 <div class="social-links">
                                     <ul class="list-wrap">
-                                        <li><a href="https://www.instagram.com/nightcrewlabb/"><i class="fab fa-instagram"></i></a></li>
+                                        <div class="col-xl-4 col-lg-5 col-md-7">
+                                            <div class="footer-widget">
+                                                <div class="footer-text">
+                                                    <p class="desc">As Nightcrew, a game development company, we bring innovation to the gaming world with passion and creativity. We touch the lives of millions of people with our high-quality games and create unforgettable memories.</p>
+                                                    <p class="social-title">Active <span>With Us <i class="fas fa-angle-double-right"></i></span></p>
+                                                    <div class="footer-social">
+                                                        <a href="https://discord.gg/sEkTY3MnA6"><img src="assets/img/icons/social_icon01.png" alt="iocn"></a>
+                                                        <a href="https://www.instagram.com/nightcrewlabb/"><img src="assets/img/icons/social_icon03.png" alt="iocn"></a>
+                                                        <a href="https://store.steampowered.com/curator/41678007"><img src="assets/img/icons/steam.png" alt="iocn"></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </ul>
                                 </div>
                             </nav>
@@ -92,12 +104,20 @@
                     </div>
                 </div>
                 <div class="offCanvas__content">
-                    <h2 class="title">BY <span>NIGHTCREW</span></h2>
-                    <div class="offCanvas__contact">
-                        <h4 class="small-title">CONTACT US</h4>
-                        <ul class="offCanvas__contact-list list-wrap">
-                            <li><a href="mailto:nightcrewlab@gmail.com">nightcrewlab@gmail.com</a></li>
-                        </ul>
+                    <div class="col-xl-4 col-lg-5 col-md-7">
+                        <div class="footer-widget">
+                            <div class="footer-text">
+                                <p class="social-title">Active <span>With Us <i class="fas fa-angle-double-right"></i></span></p>
+                                <div class="footer-social">
+                                    <a href="https://discord.gg/sEkTY3MnA6"><img src="assets/img/icons/social_icon01.png" alt="iocn"></a>
+                                    <a href="https://www.instagram.com/nightcrewlabb/"><img src="assets/img/icons/social_icon03.png" alt="iocn"></a>
+                                    <a href="https://store.steampowered.com/curator/41678007"><img src="assets/img/icons/steam.png" alt="iocn"></a>
+                                    <div class="footer-newsletter">
+                                        <li><a href="mailto:nightcrewlab@gmail.com">nightcrewlab@gmail.com</a></li>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="offCanvas__newsletter">
                         <p>As Nightcrew, a game development company, we bring innovation to the gaming world with passion and creativity. We touch the lives of millions of people with our high-quality games and create unforgettable memories.</p>
@@ -239,9 +259,6 @@
 
         <!-- area-background-start -->
         <div class="area-background" data-background="assets/img/bg/area_bg01.jpg">
-
-        <!-- about-area -->
-        <!-- about-area-end -->
 
         <!-- gallery-area -->
         <section class="gallery__area fix section-pb-130">
@@ -400,10 +417,10 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".4s">
                         <div class="team__item">
                             <div class="team__thumb">
-                                <a href="#"><img src="assets/img/team/team02.png" alt="img"></a>
+                                <a ><img src="assets\img\others\omer.jpg" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="#">Ömer Kuru</a></h4>
+                                <h4 class="name"><a >Ömer Kuru</a></h4>
                                 <span class="designation">CEO, Founder, Developer</span>
                             </div>
                         </div>
@@ -411,10 +428,10 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".6s">
                         <div class="team__item">
                             <div class="team__thumb">
-                                <a href="#"><img src="assets/img/team/team03.png" alt="img"></a>
+                                <a ><img src="assets\img\others\saffet.jpg" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="#">Saffet Sağlam</a></h4>
+                                <h4 class="name"><a >Saffet Sağlam</a></h4>
                                 <span class="designation">Partner</span>
                             </div>
                         </div>
@@ -422,10 +439,10 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".8s">
                         <div class="team__item">
                             <div class="team__thumb">
-                                <a href="#"><img src="assets/img/team/team04.png" alt="img"></a>
+                                <a ><img src="assets\img\others\selo.jpg" alt="img"></a>
                             </div>
                             <div class="team__content">
-                                <h4 class="name"><a href="#">Selahattİn Evgİn</a></h4>
+                                <h4 class="name"><a >Selahattİn Evgİn</a></h4>
                                 <span class="designation">Art Director, Others</span>
                             </div>
                         </div>
@@ -449,13 +466,6 @@
                 </div>
             </div>
         </section>
-        <!-- video-area-end -->
-
-        <!-- roadMap-area -->
-        <!-- roadMap-area-end -->
-
-        <!-- trending-nft-area -->
-        <!-- trending-nft-end -->
 
     </main>
     <!-- main-area-end -->
