--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                 </div>
                                 <div class="nft-item__bid">
                                     <div class="nft-item__price">
-                                        <p>- <span class="currency">$</span></p>
+                                        <p> <span class="currency">On Steam</span></p>
                                         <a href="https://store.steampowered.com/app/2292890/Investormania" class="bid-btn">BUY <i class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
@@ -220,7 +220,7 @@
                                 </div>
                                 <div class="nft-item__bid">
                                     <div class="nft-item__price">
-                                        <p>19,99 <span class="currency">$</span></p>
+                                        <p> <span class="currency">On Steam</span></p>
                                         <a href="https://store.steampowered.com/app/1820380/Lets_Cook/" class="bid-btn">BUY <i class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
@@ -245,7 +245,7 @@
                                 </div>
                                 <div class="nft-item__bid">
                                     <div class="nft-item__price">
-                                        <p>9,99 <span class="currency">$</span></p>
+                                        <p> <span class="currency">On Steam</span></p>
                                         <a href="https://store.steampowered.com/app/1589860/MAYBE_I_CAN" class="bid-btn">BUY <i class="fas fa-long-arrow-alt-right"></i></a>
                                     </div>
                                 </div>
