--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                 </div>
                 <div class="offCanvas__content">
-                    <div class="col-xl-4 col-lg-5 col-md-7">
+                    <div class="col-xl-8 col-lg-5 col-md-7">
                         <div class="footer-widget">
                             <div class="footer-text">
                                 <p class="social-title">Active <span>With Us <i class="fas fa-angle-double-right"></i></span></p>
@@ -113,7 +113,7 @@
                                     <a href="https://www.instagram.com/nightcrewlabb/"><img src="assets/img/icons/social_icon03.png" alt="iocn"></a>
                                     <a href="https://store.steampowered.com/curator/41678007"><img src="assets/img/icons/steam.png" alt="iocn"></a>
                                     <div class="footer-newsletter">
-                                        <li><a href="mailto:nightcrewlab@gmail.com">nightcrewlab@gmail.com</a></li>
+                                        <a href="mailto:nightcrewlab@gmail.com">nightcrewlab@gmail.com</a>
                                     </div>
                                 </div>
                             </div>
@@ -162,13 +162,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="slider__shapes">
-                <img src="assets/img/slider/slider_shape01.png" alt="shape">
-                <img src="assets/img/slider/slider_shape02.png" alt="shape">
-                <img src="assets/img/slider/slider_shape03.png" alt="shape">
-                <img src="assets/img/slider/slider_shape04.png" alt="shape">
-            </div>
+                <div class="slider__shapes">
+                    <img src="assets/img/slider/slider_shape01.png" alt="shape">
+                    <img src="assets/img/slider/slider_shape02.png" alt="shape">
+                    <img src="assets/img/slider/slider_shape03.png" alt="shape">
+                    <img src="assets/img/slider/slider_shape04.png" alt="shape">
+                </div>
             </div>
         </section>
         <!-- slider-area-end -->
@@ -476,7 +475,7 @@
         <div class="footer__top-wrap">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-4 col-lg-5 col-md-7">
+                    <div class="col-xl-8 col-lg-5 col-md-7">
                         <div class="footer-widget">
                             <div class="footer-logo logo">
                                 <a href="index.html"><img src="assets/img/logo/NCLogowhite2.png" alt="Logo"></a>
@@ -497,6 +496,15 @@
                             <h4 class="fw-title">Contact Us</h4>
                             <div class="footer-newsletter">
                                 <li><a href="mailto:nightcrewlab@gmail.com">nightcrewlab@gmail.com</a></li>
+                            </div>
+                            <div class="footer-newsletter">
+                                <li><a href="https://store.steampowered.com/app/1820380/Lets_Cook/">Let's Cook</a></li>
+                            </div>
+                            <div class="footer-newsletter">
+                                <li><a href="https://store.steampowered.com/app/2292890/Investormania/">Investormania</a></li>
+                            </div>
+                            <div class="footer-newsletter">
+                                <li><a href="https://store.steampowered.com/app/1589860/MAYBE_I_CAN/">Maybe I Can</a></li>
                             </div>
                         </div>
                     </div>
