--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                             </div>
                             <div class="team__content">
                                 <h4 class="name"><a >Saffet Sağlam</a></h4>
-                                <span class="designation">Partner</span>
+                                <span class="designation">CO-Founder</span>
                             </div>
                         </div>
                     </div>
@@ -442,7 +442,7 @@
                             </div>
                             <div class="team__content">
                                 <h4 class="name"><a >Selahattİn Evgİn</a></h4>
-                                <span class="designation">Art Director, Others</span>
+                                <span class="designation">Graphic Designer</span>
                             </div>
                         </div>
                     </div>
