--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".4s">
                         <div class="team__item">
                             <div class="team__thumb">
-                                <a ><img src="assets\img\others\omer.jpg" alt="img"></a>
+                                <a ><img src="assets\img\others\omer2.jpg" alt="img"></a>
                             </div>
                             <div class="team__content">
                                 <h4 class="name"><a >Ömer Kuru</a></h4>
@@ -427,7 +427,7 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".6s">
                         <div class="team__item">
                             <div class="team__thumb">
-                                <a ><img src="assets\img\others\saffet.jpg" alt="img"></a>
+                                <a ><img src="assets\img\others\saffet2.jpg" alt="img"></a>
                             </div>
                             <div class="team__content">
                                 <h4 class="name"><a >Saffet Sağlam</a></h4>
@@ -438,7 +438,7 @@
                     <div class="col-xl-3 col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay=".8s">
                         <div class="team__item">
                             <div class="team__thumb">
-                                <a ><img src="assets\img\others\selo.jpg" alt="img"></a>
+                                <a ><img src="assets\img\others\selo2.jpg" alt="img"></a>
                             </div>
                             <div class="team__content">
                                 <h4 class="name"><a >Selahattİn Evgİn</a></h4>
